--- a/src/header/header.scss
+++ b/src/header/header.scss
@@ -84,16 +84,20 @@ header {
 .cart-popup {
   position: fixed;
   right: -400px;
-  top: 130px;
-  width: 400px;
-  height: 70%;
-  border-radius: 10px 0  0 10px;
-  background-color: $background-color;
-  border: 1px solid $tertiary-color;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 3px 0  0 3px;
+  background-color: rgba($color: #5e5e5e, $alpha: 0.7);
+  backdrop-filter: blur(5px);
+  // border: 1px solid $tertiary-color;
   padding: 20px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   z-index: 99999999;
   transition: right 0.3s ease-in-out;
+  @include respond-to(tablet){
+    width: 400px;
+  }
 
   // Khi hiển thị popup
   &.show {
@@ -101,6 +105,10 @@ header {
   }
 
   // Nội dung giỏ hàng
+  .cart-content::-webkit-scrollbar{
+      width: 5px;
+  }
+  
   .cart-content {
     display: flex;
     flex-direction: column;
@@ -108,6 +116,7 @@ header {
     overflow-y: auto;
     justify-content: flex-start;
     align-items: center;
+    // 
 
     // Thông báo khi giỏ hàng trống
     p {
@@ -115,6 +124,51 @@ header {
       font-weight: bold;
       color: $accent-color;
       margin: 20px 0;
+    }
+
+    .close-delete_btns{
+      display: inline-block;
+      padding-bottom: 10px;
+      // Nút xóa giỏ hàng
+        button.clear-cart,
+        .deleteItemBtn {
+          background-color: $accent-color;
+          color: white;
+          border: none;
+          padding: 10px;
+          margin-right: 50px;
+          cursor: pointer;
+          border-radius: 5px;
+          margin-top: 20px;
+          transition: background-color 0.3s;
+          height: 50px;
+          width: 60%;
+      
+          &:hover {
+            background-color: $accent-color;
+          }
+        }
+      
+        // Nút đóng giỏ hàng
+        button.close-cart {
+          background-color: $primary-color;
+          color: white;
+          border: none;
+          cursor: pointer;
+          border-radius: 5px;
+          transition: background-color 0.3s;
+          width: 30px;
+          height: 30px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          position: relative;
+          margin-left: 325px;
+          &:hover {
+            background-color: $primary-color;
+          }
+        }
+
     }
 
     // Danh sách sản phẩm
@@ -126,7 +180,6 @@ header {
       background-color: white;
       border-radius: 5px;
       width: 100%;
-
       img {
         width: 70px;
         height: auto;
@@ -139,6 +192,7 @@ header {
         flex: 1; // Cho phép nội dung chiếm phần còn lại
         p{
           text-align: right;
+          font-size: 12px;
         }
         .sl{
           text-align: right;
@@ -150,8 +204,8 @@ header {
 
           button {
             margin-right: 5px;
-            background-color: $primary-color;
-            color: white;
+            background-color: none;
+            color: black;
             border: none;
             padding: 5px 10px;
             cursor: pointer;
@@ -171,6 +225,7 @@ header {
       font-weight: bold;
       color: #dc3e37; // Màu sắc cho tổng tiền
     }
+    
 
     // Nút xóa giỏ hàng
     button.clear-cart, .deleteItemBtn{
@@ -235,6 +290,9 @@ header {
   }
 }
 
+
+
+// 
 .cart-btn {
   position: relative;
 
