--- a/src/header/header.scss
+++ b/src/header/header.scss
@@ -88,8 +88,8 @@ header {
   width: 100%;
   height: 100%;
   border-radius: 3px 0  0 3px;
-  background-color: rgba($color: #5e5e5e, $alpha: 0.7);
-  backdrop-filter: blur(5px);
+  background-color: rgba($color: #dbdbdb, $alpha: 0.7);
+  backdrop-filter: blur(2px);
   // border: 1px solid $tertiary-color;
   padding: 20px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
